[package]
name = "game_project"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.27"
log = "0.4.22"
rusttype = "0.9"
rand = "0.8"

winit = { version = "0.29", features = ["rwh_05"] }
anyhow = "1.0"
bytemuck = {  version = "1.21.0",  features = [ "derive" ] }

env_logger = "0.11.6"
wgpu = { version = "24.0", features = ["spirv"]}
glyphon = "0.8.0"
pollster = "0.4.0"
rodio = { version = "0.16", default-features = false, features = ["wav"] }

strum = "0.27.1"
strum_macros = "0.27.1"

# other deps...
cgmath = "0.18.0"
instant = "0.1.13"


[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
naga = { version = "0.11", features = ["glsl-in", "spv-out", "wgsl-out"]}
